# Spec2LLM

./: .gitignore  README.md  pyproject.toml  readme_pypi.md
spec2llm/: __init__.py  __main__.py
spec2llm/cli/: app.py
spec2llm/core/: gpu_detector.py  matcher.py  model_catalog.py  system_detector.py
spec2llm/data/: models.json
